bpo-44114: Fix dictkeys_reversed and dictvalues_reversed function signatures (GH-26062)

These are passed and called as PyCFunction, however they are defined here without the (ignored) args parameter.

This works fine in some C compilers, but fails in webassembly or anything else that has strict function pointer call type checking.
(cherry picked from commit ab383eb6f03896b0ef6634ee3d776344fcb9e5b8)

Co-authored-by: Joe Marshall <joe.marshall@nottingham.ac.uk>